--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+         <link rel="stylesheet" type="text/css" href="./src/css/style.css">
     </head>
     <body>
-        <script type="text/javascript" src="./public/bundle.js" charset="utf-8"></script>
+        <div id="divForLoginForm"></div>
+
     </body>
+    <script type="text/javascript" src="./build/bundle.js" charset="utf-8"></script>
 </html>
