--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-         <link rel="stylesheet" type="text/css" href="./src/css/style.css">
-    </head>
-    <body>
-        <div id="divForLoginForm"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="./src/css/style.css">
 
-    </body>
-    <script type="text/javascript" src="./build/bundle.js" charset="utf-8"></script>
+  <title>Document</title>
+</head>
+<body>
+
+  <div id="page"></div>
+
+
+<iframe id="adminPage" src="./src/tmpl/admin.html"></iframe>
+
+  <script src="public/bundle.js"></script>
+</body>
 </html>
