--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
 
-  <div id="page"></div>
+  <div id="page">
+  	
+  </div>
 
 
-<iframe id="adminPage" src="./src/tmpl/admin.html"></iframe>
+<!-- <iframe id="adminPage" src="./src/tmpl/admin.html"></iframe> -->
 
   <script src="public/bundle.js"></script>
 </body>
