--- a/src/tmpl/userProfile.html
+++ b/src/tmpl/userProfile.html
@@ -1,7 +1,5 @@
 <div>
-  <h1>Hello {{user.name}}</h1>
-  <h2>Last time you logged in {{user.lastVisit}}</h2>
-  <br>
-  <br>
+  <h1>Hello {{name}}</h1>
+  <h2>Last time you logged in {{lastVisit}}</h2>
 </div>
 
